--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap": "^4.4.1",
     "expo": "^36.0.2",
     "expo-font": "~8.0.0",
+    "expo-google-sign-in": "~8.0.0",
     "firebase": "^7.7.0",
     "lottie-react-native": "~2.6.1",
     "native-base": "^2.13.8",
